2002-11-28  Jakub Jelinek  <jakub@redhat.com>

	* ld-i386/tlsnopic.rd: Change NOTYPE to TLS for UND sg* symbols.

2002-11-28  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* ld-sh/refdbg-0-dso.d: New test.
	* ld-sh/refdbg-1.d: Likewise.
	* ld-sh/refdbg.s: Likewise.
	* ld-sh/refdbglib.s: Likewise.

2002-11-22  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/elf.exp: Remove sec64k test.
	* ld-elf/sec64k.exp: Reinstate.

2002-11-21  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/elf.exp: Renamed from sec64k.exp.  Add test_list loop.
	* ld-elf/merge.s: New file.
	* ld-elf/merge.d: New file.
	* ld-elf/merge.ld: New file.

2002-11-18  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* ld-scripts/script.exp: Setup for tic4x testcase

2002-11-15  Nick Clifton  <nickc@redhat.com>

	* ld-h8300: New directory.
	* ld-h8300/h8300.exp: New expect script.  Only run tests for h8300
	targets.
	* ld-h8300/relax.s: New assembler source file.
	* ld-h8300/relax.d: New expected output file.

2002-11-11  Hans-Peter Nilsson  <hp@axis.com>

	* ld-elf/sec64k.exp: New test.
	* lib/ld-lib.exp (run_dump_test): Don't prepend "$srcdir/$subdir/"
	to a source file starting with "/".

2002-11-10  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-mmix/local1.d, ld-mmix/local3.d, ld-mmix/local5.d,
	ld-mmix/local7.d: Tweak for change in readelf output.

2002-11-09  Alan Modra  <amodra@bigpond.net.au>

	* ld-elfvsb/define.s: Avoid use of @ in .type directive.

2002-11-07  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/expdyn6.d, ld-cris/weakref2.d, ld-cris/expdyn7.d,
	ld-cris/nodyn5.d, ld-cris/expdyn5.d: New tests.

2002-11-07  Nick Clifton  <nickc@redhat.com>

	* ld-fastcall/fastcall.exp: Only run tests for PE type x86
	targets.

2002-11-07  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* ld-sh/rd-sh.exp: Set asflags_save always.

2002-11-07  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* ld-fastcall: New directory for testing fastcall support.
	* ld-fastcall/export.s: New file for testing fastcall symbol
	handling.