@@ -1,3 +1,9 @@
+2002-12-01  Stephane Carrez  <stcarrez@nerim.fr>
+
+	Fix PR savannah/1417:
+	* ld-m68hc11/bug-1417.s: New test.
+	* ld-m68hc11/bug-1417.d: Likewise.
+
 2002-11-28  Jakub Jelinek  <jakub@redhat.com>
 
 	* ld-i386/tlsnopic.rd: Change NOTYPE to TLS for UND sg* symbols.
